[gd_scene load_steps=2 format=3 uid="uid://bxn5d8qv2mw5k"]

[ext_resource type="Script" path="res://UI/MarketUI.gd" id="1_1"]

[node name="MarketUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Market"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="PlayerNameLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/LeftPanel"]
layout_mode = 2
text = "Player"
horizontal_alignment = 1

[node name="PlayerMoneyLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/LeftPanel"]
layout_mode = 2
text = "Money: 0"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ContentContainer/LeftPanel"]
layout_mode = 2

[node name="PlayerScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ContentContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerItemList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer/LeftPanel/PlayerScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="HubNameLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/RightPanel"]
layout_mode = 2
text = "Hub"
horizontal_alignment = 1

[node name="HubMoneyLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentContainer/RightPanel"]
layout_mode = 2
text = "Money: 0"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ContentContainer/RightPanel"]
layout_mode = 2

[node name="HubScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ContentContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="HubItemList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer/RightPanel/HubScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FooterContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NetTotalLabel" type="Label" parent="MarginContainer/VBoxContainer/FooterContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Net: 0"
horizontal_alignment = 1

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer/FooterContainer"]
layout_mode = 2
text = "Confirm Transaction"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/FooterContainer"]
layout_mode = 2
text = "Cancel"
